# conccpp

./: .clang-format  CMakeLists.txt  format.sh  lint.sh  test.sh
.github/workflows/: checks.yml
cmake/: ConcppGetUserHomeDir.cmake  ConcppGetValueForCompiler.cmake  ConcppPrintCmakeInfo.cmake  ConcppSetupCompilerWarnings.cmake  GetUserHomeDir.cmake  GetUserHomeDir.cmake.test.py  GetValueForCompiler.cmake  GetValueForCompiler.test.py  PrintCmakeInfo.cmake  SetupCompilerWarnings.cmake  util.py
cmake/test/: ConcppGetUserHomeDir.cmake.test.py  ConcppGetValueForCompiler.cmake.test.py
scripts/: build_docker_python_image.sh  format.sh  format_python.py  format_python.sh  lint.sh  lint_python.py  lint_python.sh  pyformat.py  pyformat.sh  python.dockerfile  python_sources.py  run_python_script_in_container.sh  setup_podman_images.sh  source_file_finder.py  test.sh  test_python.py  test_python.sh  type_python.py  type_python.sh
src/: CMakeLists.txt
src/include/concpp/: stack.h
src/test/: CMakeLists.txt  stack_test.cc
stack/: CMakeLists.txt
stack/include/concpp/: stack.h
stack/src/concpp/: stack.cc
stack/test/: CMakeLists.txt  stack_test.cc
workflows/checks/: generate.py  index.txt  jobs_cpp.txt  jobs_generated.txt  jobs_python.txt
